--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,23 @@
         android:theme="@style/Theme.JSONExample"
         tools:targetApi="31" >
         <activity
+            android:name=".SignUp"
+            android:exported="false" />
+        <activity
             android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".Welcome"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
