--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JSONExample"
-        tools:targetApi="31" >
+        android:theme ="@style/Theme.AppCompat.Light.DarkActionBar"
+        tools:targetApi="31"
+      >
         <activity
             android:name=".SignUp"
             android:exported="false" />
@@ -30,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MainPage"
             android:exported="false" />
     </application>
 
