--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,21 @@
       >
         <activity
             android:name=".SignUp"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppTheme"
+            />
+
+
         <activity
             android:name=".Login"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppTheme"
+            />
         <activity
             android:name=".Welcome"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,7 +40,9 @@
         </activity>
         <activity
             android:name=".MainPage"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/recipeMePalette"
+            />
     </application>
 
 </manifest>
