--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,26 +12,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme ="@style/Theme.AppCompat.Light.DarkActionBar"
-        tools:targetApi="31"
-      >
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+        tools:targetApi="31">
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        <activity
+            android:name=".RecipeDetails"
+            android:exported="false"
+            android:label="@string/title_activity_recipe_details"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".SignUp"
             android:exported="false"
-            android:theme="@style/AppTheme"
-            />
-
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Login"
             android:exported="false"
-            android:theme="@style/AppTheme"
-            />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Welcome"
             android:exported="true"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,8 +45,7 @@
         <activity
             android:name=".MainPage"
             android:exported="false"
-            android:theme="@style/recipeMePalette"
-            />
+            android:theme="@style/recipeMePalette" />
     </application>
 
 </manifest>
